# codeforms

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: basic_usage.py  conditional_visibility.py  custom_fields.py  dependent_options.py  i18n_usage.py  wizard_form.py
src/codeforms/: __init__.py  export.py  fields.py  forms.py  i18n.py  registry.py
tests/: test_basic_usage.py  test_dependent_options.py  test_dynamic_visibility.py  test_i18n.py  test_json_schema_export.py  test_object_list_field.py  test_phase2_compat.py  test_registry.py  test_wizard_steps.py
