[project]
name = "codeforms"
version = "0.1.0"
description = "Python library for creating, validating, and rendering web forms using Pydantic"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic[email]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codeforms"]

[tool.pytest.ini_options]
testpaths = ["tests"]
